Sixth test commit, adding path resource storages, option to change them by adding new class, changing location to compare results. Packed project to .jar, worked fine.